src/objects/fferpcore__FeatureConsoleFeatureStep__mdt.object
<CustomObject>
    <fields>
        <fullName>fferpcore__Feature__c</fullName>
        <label>Feature</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsOptional__c</fullName>
        <label>Optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StepDescription__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__StepNumber__c</fullName>
        <label>Step</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__StepType__c</fullName>
        <label>Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Step</label>
    <pluralLabel>Feature Steps</pluralLabel>
</CustomObject>